# YouTube

./: .gitignore  README.md  pyproject.toml
assets/thumbnails/: resize_thumbnails.py
youtube/processing/: thumbnail_adder.py  watermark_adder.py
youtube/upload/: scheduler.py
